fix(combobox): Fix alignment issues of inline listbox (#3887)
* fix(combobox): fix alignment of inline listbox

* fix(combobox): apply inline listbox alignment fix to all context

* fix(combobox): move flex-basis to input to allow listbox to grow

* fix(combobox): prevent inline listbox from shrinking

* fix(combobox): Increase height of desktop inline listbox to match height of other inputs

--- a/ui/components/combobox/base/_index.scss
+++ b/ui/components/combobox/base/_index.scss
@@ -595,17 +595,20 @@
   border: $border-width-thin solid $color-border;
   border-radius: $border-radius-medium;
 
+  .slds-combobox {
+    flex-basis: 50%;
+    flex-shrink: 0;
+  }
+
   .slds-combobox__input {
-    min-height: $height-pill;
-    line-height: $height-pill;
+    min-height: 100%;
+    line-height: calc(#{$height-input} - 2px);
     border: 0;
     padding-top: $spacing-xxx-small;
     padding-bottom: $spacing-xxx-small;
 
     @include touch-device {
       @include border-box-line-height($height-tappable, 0, $spacing-xxx-small * 2);
-      min-height: $height-tappable;
-      padding: 0;
     }
 
     &:focus,
